--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,9 @@ jobs:
         dotnet-version: 6.0.x 
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: src Codigo/Backend/PharmaGo.WebApi
+                          /PharmaGo.WebApi.csproj
+
     - name: Build
       run: dotnet build --no-restore
     - name: Test
