--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,9 +5,9 @@ name: .NET
 
 on:
   push:
-    branches: [ "main" ] #Esta seria nuestra rama tronco "trunk"
+    branches: [ "main", "develop" ] #Nuestra rama tronco "trunk" seria develop
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "main", "develop" ]
 
 jobs:
   build:
