--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,4 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-      working-directory: Codigo\Frontend\src
+      working-directory: Codigo\Frontend\package-lock.json
