--- a/Codigo/Backend/PharmaGo.BusinessLogic/PharmaGo.BusinessLogic.csproj
+++ b/Codigo/Backend/PharmaGo.BusinessLogic/PharmaGo.BusinessLogic.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ExportationModel\ExportationModel.csproj" />
+    <ProjectReference Include="..\PharmaGo.DataAccess\PharmaGo.DataAccess.csproj" />
     <ProjectReference Include="..\PharmaGo.Domain\PharmaGo.Domain.csproj" />
     <ProjectReference Include="..\PharmaGo.Exceptions\PharmaGo.Exceptions.csproj" />
     <ProjectReference Include="..\PharmaGo.IBusinessLogic\PharmaGo.IBusinessLogic.csproj" />
