--- a/Codigo/Backend/SpecFlowProject.spec/SpecFlowProject.spec.csproj
+++ b/Codigo/Backend/SpecFlowProject.spec/SpecFlowProject.spec.csproj
@@ -22,7 +22,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PharmaGo.BusinessLogic\PharmaGo.BusinessLogic.csproj" />
+    <ProjectReference Include="..\PharmaGo.DataAccess\PharmaGo.DataAccess.csproj" />
     <ProjectReference Include="..\PharmaGo.Domain\PharmaGo.Domain.csproj" />
+    <ProjectReference Include="..\PharmaGo.Exceptions\PharmaGo.Exceptions.csproj" />
+    <ProjectReference Include="..\PharmaGo.Factory\PharmaGo.Factory.csproj" />
+    <ProjectReference Include="..\PharmaGo.IBusinessLogic\PharmaGo.IBusinessLogic.csproj" />
+    <ProjectReference Include="..\PharmaGo.IDataAccess\PharmaGo.IDataAccess.csproj" />
     <ProjectReference Include="..\PharmaGo.WebApi\PharmaGo.WebApi.csproj" />
   </ItemGroup>
 
