--- a/Codigo/Backend/SpecFlowProject.spec/SpecFlowProject.spec.csproj
+++ b/Codigo/Backend/SpecFlowProject.spec/SpecFlowProject.spec.csproj
@@ -28,6 +28,8 @@
     <ProjectReference Include="..\PharmaGo.Domain\PharmaGo.Domain.csproj" />
     <ProjectReference Include="..\PharmaGo.Exceptions\PharmaGo.Exceptions.csproj" />
     <ProjectReference Include="..\PharmaGo.Factory\PharmaGo.Factory.csproj" />
+    <ProjectReference Include="..\PharmaGo.IBusinessLogic\PharmaGo.IBusinessLogic.csproj" />
+    <ProjectReference Include="..\PharmaGo.IDataAccess\PharmaGo.IDataAccess.csproj" />
     <ProjectReference Include="..\PharmaGo.WebApi\PharmaGo.WebApi.csproj" />
     <ProjectReference Include="..\PharnaGo.Test\PharmaGo.Test.csproj" />
   </ItemGroup>
